--- a/词汇/english/src/main/resources/templates/index.html
+++ b/词汇/english/src/main/resources/templates/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <style>
+    <link th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" rel="stylesheet"/>
+        <style>
         #headDiv{
             font-size: 16px;
             margin-top: 20px;
@@ -35,6 +36,20 @@
     <div id="note" class="wordExplain"></div>
     <div id="chinese" class="wordExplain"></div>
     <div id="sentence" class="wordExplain"></div>
+</div>
+<div>
+    <table class="table table-striped table-hover">
+        <thead  align="center">
+        <tr>
+            <td width="40%">word</td>
+            <td width="40%">chinese</td>
+            <td>operator</td>
+        </tr>
+        </thead>
+        <tbody id="wordtbody" align="center" style="display: none">
+
+        </tbody>
+    </table>
 </div>
 </body>
 <div th:include="/footer_js::footer"></div>
