--- a/词汇/english/src/main/resources/templates/admin.html
+++ b/词汇/english/src/main/resources/templates/admin.html
@@ -26,6 +26,7 @@
             <thead  align="center">
                 <tr>
                     <td width="40%">word</td>
+                    <td>root</td>
                     <td width="40%">chinese</td>
                     <td>operator</td>
                 </tr>
