--- a/词汇/english/src/main/resources/templates/index.html
+++ b/词汇/english/src/main/resources/templates/index.html
@@ -38,15 +38,14 @@
     <div id="sentence" class="wordExplain"></div>
 </div>
 <div>
-    <table class="table table-striped table-hover">
+    <table class="table table-striped table-hover wordExplain" id="rootTable"  style="display: none">
         <thead  align="center">
         <tr>
-            <td width="40%">word</td>
-            <td width="40%">chinese</td>
-            <td>operator</td>
+            <td>word</td>
+            <td>chinese</td>
         </tr>
         </thead>
-        <tbody id="wordtbody" align="center" style="display: none">
+        <tbody id="wordtbody" align="left">
 
         </tbody>
     </table>
