--- a/词汇/english/src/main/resources/templates/index.html
+++ b/词汇/english/src/main/resources/templates/index.html
@@ -28,7 +28,7 @@
     <table class="table table-striped table-hover wordExplain" id="rootTable"  style="display: none">
         <thead  align="center">
         <tr>
-            <td>word</td>
+            <td width="25%">word</td>
             <td>chinese</td>
         </tr>
         </thead>
