--- a/词汇/english/src/main/resources/templates/index.html
+++ b/词汇/english/src/main/resources/templates/index.html
@@ -10,6 +10,10 @@
     <div align="right">
         <a href="javascript:open('/admin')">管理界面</a>
     </div>
+    <div align="center">
+        <input type="text" id="searchWord" class='input-medium'>
+        <button type='button' class='btn btn-default' id="search" >Search</button>
+    </div>
     <div id="headDiv" align="center">
         <span id="rootSpan">词根</span>
         <span id="chineseSpan">中文</span>
