--- a/词汇/english/src/main/resources/templates/admin.html
+++ b/词汇/english/src/main/resources/templates/admin.html
@@ -15,7 +15,7 @@
                    <input type="file" id="uploadFile" name="uploadFile"  />
                 </td>
                 <td>
-                    <button type='button' class='btn btn-default' id="importWord" ><span class='glyphicon glyphicon-import'>Import Word</span></button>
+                    <button type='button' class='btn btn-default' id="importWord" >Import Word</button>
                 </td>
             </tr>
         </table>
